fix day92: images not showing

--- a/src/days/Day-092/index.css
+++ b/src/days/Day-092/index.css
@@ -26,7 +26,6 @@ h1 {
 }
 
 li {
-    list-style-image: url('./images/pets_24px_outlined.svg');
     vertical-align: middle;
     display: flex;
     align-items: center;
